--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -8,12 +8,12 @@
     >
 
     <TextView
-        android:id="@+id/L_title"
+        android:id="@+id/mh"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_20dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
         android:background="@color/profile_desc"
         android:text="event details"
         android:textAlignment="center"
@@ -32,29 +32,24 @@
         app:layout_constraintBottom_toTopOf="@+id/pItemDets"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/L_title">
+        app:layout_constraintTop_toBottomOf="@+id/mh">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/hh"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/status"
-                android:layout_width="243dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_toLeftOf="@+id/eStatus"
-                android:text="STATUS :"
+                android:text="STATUS "
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/eStatus"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -62,12 +57,11 @@
                 android:id="@+id/eStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginStart="5dp"
+                android:layout_alignParentTop="false"
+                android:layout_alignParentEnd="false"
+                android:layout_alignParentRight="false"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginEnd="32dp"
                 android:layout_marginBottom="5dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
@@ -76,7 +70,6 @@
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/status"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -106,11 +99,12 @@
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="@dimen/dimen_20dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginBottom="5dp"
                 android:layout_toLeftOf="@+id/pImg"
                 android:text="Item Name"
-                android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
 
@@ -120,11 +114,12 @@
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_below="@id/pItem"
                 android:layout_alignParentStart="true"
-                android:layout_marginTop="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginBottom="5dp"
                 android:layout_toLeftOf="@+id/pImg"
                 android:text="Service Type"
-                android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
 
@@ -134,20 +129,24 @@
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_below="@id/pService"
                 android:layout_alignParentStart="true"
-                android:layout_marginTop="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toLeftOf="@+id/pImg"
                 android:text="Location"
-                android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
 
             <ImageView
                 android:id="@+id/pImg"
                 android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_height="100dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true" />
+                android:layout_alignParentRight="true"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/auto_service" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
@@ -163,13 +162,13 @@
         app:layout_constraintTop_toBottomOf="@+id/pItemDets">
 
         <RelativeLayout
-            android:id="@+id/card0"
+            android:id="@+id/card2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp">
 
             <TextView
-                android:id="@+id/c0"
+                android:id="@+id/h2"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_alignParentTop="true"
@@ -182,7 +181,8 @@
                 android:id="@+id/cNote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/c0"
+                android:layout_below="@id/h2"
+                android:layout_marginTop="2dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
 
@@ -191,6 +191,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/cNote"
+                android:layout_marginTop="5dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
         </RelativeLayout>
@@ -209,13 +210,13 @@
         app:layout_constraintTop_toBottomOf="@+id/pDiagnosis">
 
         <RelativeLayout
-            android:id="@+id/card2"
+            android:id="@+id/card3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp">
 
             <TextView
-                android:id="@+id/c2"
+                android:id="@+id/h3"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_alignParentTop="true"
@@ -228,7 +229,8 @@
                 android:id="@+id/cName"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
-                android:layout_below="@id/c2"
+                android:layout_below="@id/h3"
+                android:layout_marginTop="2dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
 
@@ -237,6 +239,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_below="@id/cName"
+                android:layout_marginTop="5dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
         </RelativeLayout>
@@ -254,13 +257,13 @@
         app:layout_constraintTop_toBottomOf="@+id/custDeets">
 
         <RelativeLayout
-            android:id="@+id/card3"
+            android:id="@+id/card4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp">
 
             <TextView
-                android:id="@+id/c3"
+                android:id="@+id/h4"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_alignParentTop="true"
@@ -273,7 +276,8 @@
                 android:id="@+id/tName"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
-                android:layout_below="@id/c3"
+                android:layout_below="@id/h4"
+                android:layout_marginTop="2dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
             <TextView
@@ -281,6 +285,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_below="@id/tName"
+                android:layout_marginTop="5dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
@@ -297,13 +302,13 @@
         app:layout_constraintTop_toBottomOf="@+id/techDeets">
 
         <RelativeLayout
-            android:id="@+id/card4"
+            android:id="@+id/card5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp">
 
             <TextView
-                android:id="@+id/c4"
+                android:id="@+id/h5"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_alignParentTop="true"
@@ -316,7 +321,8 @@
                 android:id="@+id/sDate"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
-                android:layout_below="@id/c4"
+                android:layout_below="@id/h5"
+                android:layout_marginTop="2dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
             <TextView
@@ -324,6 +330,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_below="@id/sDate"
+                android:layout_marginTop="5dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
@@ -334,20 +341,19 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/followUpCard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/evDeets">
 
         <RelativeLayout
-            android:id="@+id/card5"
+            android:id="@+id/card6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp">
 
             <TextView
-                android:id="@+id/h5"
+                android:id="@+id/h6"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_alignParentTop="true"
@@ -360,7 +366,8 @@
                 android:id="@+id/startTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/h5"
+                android:layout_below="@id/h6"
+                android:layout_marginTop="2dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
 
@@ -369,9 +376,60 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/startTime"
+                android:layout_marginTop="5dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/followUpCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pTime">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/card7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
+
+            <TextView
+                android:id="@+id/fu"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/dimen_20dp"
+                android:layout_marginBottom="2dp"
+                android:background="#7DC6DD"
+                android:text="Follow Up:"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                app:layout_constraintBottom_toTopOf="@+id/folUp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/folUp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fu" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
